logs/dag_id=currency_parsing/run_id=scheduled__2024-04-13T000000+0000/task_id=fetch_data/attempt=1.log
[2024-04-14T08:05:55.201+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [queued]>
[2024-04-14T08:05:55.231+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [queued]>
[2024-04-14T08:05:55.232+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 2
[2024-04-14T08:05:55.275+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): fetch_data> on 2024-04-13 00:00:00+00:00
[2024-04-14T08:05:55.282+0000] {standard_task_runner.py:60} INFO - Started process 144 to run task
[2024-04-14T08:05:55.300+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing', 'fetch_data', 'scheduled__2024-04-13T00:00:00+00:00', '--job-id', '156', '--raw', '--subdir', 'DAGS_FOLDER/currency_parsing.py', '--cfg-path', '/tmp/tmptyxen9ii']
[2024-04-14T08:05:55.307+0000] {standard_task_runner.py:88} INFO - Job 156: Subtask fetch_data
[2024-04-14T08:05:55.418+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [running]> on host e8a1e0443283
[2024-04-14T08:05:55.616+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing' AIRFLOW_CTX_TASK_ID='fetch_data' AIRFLOW_CTX_EXECUTION_DATE='2024-04-13T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-13T00:00:00+00:00'
[2024-04-14T08:05:55.679+0000] {logging_mixin.py:188} INFO - ['АВСТРАЛИЙСКИЙ ДОЛЛАР', 'AUD', '290.68', '1', 'DOWN', '-1.91', '2024-4-13']
[2024-04-14T08:05:55.680+0000] {logging_mixin.py:188} INFO - ['currency', 'title', 'rate', 'quantity', 'index', 'change', 'date']
[2024-04-14T08:05:55.718+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-14T08:05:55.739+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/currency_parsing.py", line 34, in fetch_data
    dwh_hook.insert_rows(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 565, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^

[2024-04-14T08:05:55.779+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=currency_parsing, task_id=fetch_data, execution_date=20240413T000000, start_date=20240414T080555, end_date=20240414T080555
[2024-04-14T08:05:55.815+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 156 for task fetch_data (INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^
; 144)
[2024-04-14T08:05:55.873+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-14T08:05:55.915+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-14T08:35:31.515+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [queued]>
[2024-04-14T08:35:31.537+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [queued]>
[2024-04-14T08:35:31.538+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 2
[2024-04-14T08:35:31.565+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): fetch_data> on 2024-04-13 00:00:00+00:00
[2024-04-14T08:35:31.571+0000] {standard_task_runner.py:60} INFO - Started process 570 to run task
[2024-04-14T08:35:31.577+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing', 'fetch_data', 'scheduled__2024-04-13T00:00:00+00:00', '--job-id', '168', '--raw', '--subdir', 'DAGS_FOLDER/currency_parsing.py', '--cfg-path', '/tmp/tmpyl1ijve4']
[2024-04-14T08:35:31.582+0000] {standard_task_runner.py:88} INFO - Job 168: Subtask fetch_data
[2024-04-14T08:35:31.669+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing.fetch_data scheduled__2024-04-13T00:00:00+00:00 [running]> on host e8a1e0443283
[2024-04-14T08:35:31.783+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing' AIRFLOW_CTX_TASK_ID='fetch_data' AIRFLOW_CTX_EXECUTION_DATE='2024-04-13T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-13T00:00:00+00:00'
[2024-04-14T08:35:31.803+0000] {logging_mixin.py:188} INFO - ['АВСТРАЛИЙСКИЙ ДОЛЛАР', 'AUD', '290.68', '1', 'DOWN', '-1.91', '2024-4-13']
[2024-04-14T08:35:31.803+0000] {logging_mixin.py:188} INFO - ['currency', 'title', 'rate', 'quantity', 'index', 'change', 'date']
[2024-04-14T08:35:31.817+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-14T08:35:31.836+0000] {sql.py:572} INFO - Done loading. Loaded a total of 39 rows into currency_parsing
[2024-04-14T08:35:31.837+0000] {python.py:202} INFO - Done. Returned value was: None
[2024-04-14T08:35:31.850+0000] {taskinstance.py:1149} INFO - Marking task as SUCCESS. dag_id=currency_parsing, task_id=fetch_data, execution_date=20240413T000000, start_date=20240414T083531, end_date=20240414T083531
[2024-04-14T08:35:31.918+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2024-04-14T08:35:31.950+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
